--- a/src/containers/Testimonial/testimonial.module.scss
+++ b/src/containers/Testimonial/testimonial.module.scss
@@ -25,6 +25,7 @@
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
+                background-color: #fff;
                 padding: 20px;
                 border-radius: 5px;
                 gap: 10px;
