--- a/src/footer/footer.module.scss
+++ b/src/footer/footer.module.scss
@@ -1,32 +1,120 @@
+@import "../styles//variables";
+
 .footer_container{
-    background-color: #fbd02b;
-    .logo{
-        margin-left: 20px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        border-radius: 50%;
-    }
-    a{
-        color: #112A46;
-        padding: 5px 10px;
-        font-weight: 600;
-        text-decoration: none;
-    }
-    a:hover{
-        color: #020507;
-    }
+    background-color: #000;
+    color: #fff;
+    .container{
+        width: 85vw;
+        margin: auto;
+        .col_1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            margin-top: 35px;
 
-    .links_heading{
-        margin: 0;
-        font-size: 24px;
-    }
+            .logo{
 
-    .footer_bottom_banner{
-        background-color: #112A46;
-        color: #fff;
-        padding: 20px 0;
-        p{
-            margin: 0;
+                width: 150px !important;
+                height: auto !important;
+                
+            }
+            
+            ul{
+                margin: 0;
+                border-left: 1px solid #fff;
+                padding: 20px 0 20px 20px;
+                margin-left: 20px;
+
+                li{
+                    display: flex;
+                    list-style-type: none;
+                    padding: 0 0 5px 0;
+                    a{
+                        padding: 5px 10px;
+                        color: #fff;
+                        font-weight: 600;
+                        text-decoration: none;
+                    }
+                    
+                    a:hover{
+                        color: #020507;
+                    }
+                    
+                    .info_icons{
+                        margin-right: 10px;
+                        color: $yellow;
+                        font-size: 15px;
+                    }
+                }
+            }
+            @media(max-width:768px){
+                flex-direction: column;
+                ul{
+                    border: none;
+                    margin: 0;
+                    padding: 0;
+                }
+            }
+        }
+        
+        .col_2{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .heading{
+                color: $yellow;
+                margin-bottom: 15px;
+                position: relative;
+            }
+
+            .heading::after{
+                content: "";
+                background-color: #fff;
+                height: 2px;
+                width: 315px;
+                position: absolute;
+                bottom: -5px;
+                left: -13px;
+            }
+
+            ul{
+                padding: 0 0 0 15px;
+                list-style-type: none;
+                li{
+                    display: flex;
+                    color: $yellow;
+                    padding: 0 0 5px 0;
+                    a{
+                        text-decoration: none;
+                        color: #fff;
+                        margin-left: 10px;
+                    }
+                }
+            }
+            @media(max-width:768px){
+                margin-top: 20px !important;
+                .heading{
+                    text-align: center;
+                }
+                .heading::after{
+                    display: none;
+                }
+                ul{
+                    margin: 0;
+                    padding: 0;
+                }
+            }
+        }
+
+        .footer_bottom_banner{
+            background-color: #112A46;
+            color: #fff;
+            padding: 20px 0;
+            p{
+                margin: 0;
+            }
         }
     }
 }
