--- a/src/containers/Services/service.module.scss
+++ b/src/containers/Services/service.module.scss
@@ -6,8 +6,19 @@
     font-size: 30px;
     color: $tarcoal;
     font-family: $poppins_regular;
+    margin-bottom: 10px;
     @media(max-width:768px){
         font-size: 25px;
+    }
+}
+
+.text{
+    margin: 0;
+    text-align: center;
+    font-size: 20px;
+    color: $tarcoal;
+    @media(max-width:768px){
+        font-size: 15px;
     }
 }
 
