--- a/src/containers/WhatMakeUsDifferent/whatMakeUsDifferent.module.scss
+++ b/src/containers/WhatMakeUsDifferent/whatMakeUsDifferent.module.scss
@@ -1,12 +1,26 @@
 @import '../../styles/variables';
 
-.container{
-
+.container{ 
+    padding: 60px 0;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/images/bgImgBanner.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    // position: relative;
+    // .img{
+    //     position: absolute;
+    //     top: 0;
+    //     height: 100%;
+    //     width: 100%;
+    //     object-fit: cover;
+    // }
+    
     .heading{
         margin: 0;
         text-align: center;
         font-size: 30px;
-        color: $tarcoal;
+        color: #fff;
         font-family: $poppins_regular;
         margin-bottom: 20px;
         @media(max-width:768px){
@@ -14,12 +28,15 @@
         }
     }
 
-    >div{
+    .table_container{
+        background-color: #ffffffab;
         scrollbar-width: thin;
         th{
             font-size: 16px;
             font-family: $poppins_regular;
         }
     }
-    
+    @media(max-width:768px){
+        padding: 30px 0;
+    }
 }
