--- a/src/containers/PriceList/priceList.module.scss
+++ b/src/containers/PriceList/priceList.module.scss
@@ -1,21 +1,27 @@
 @import '../../styles/variables';
 
 .container{ 
-    padding: 60px 0;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/images/bgImgBanner.jpg");
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
+
     .heading{
         margin: 0;
         text-align: center;
         font-size: 30px;
-        color: #fff;
+        color: $tarcoal;
         font-family: $poppins_regular;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         @media(max-width:768px){
             font-size: 25px;
+        }
+    }
+
+    .text{
+        margin: 0;
+        text-align: center;
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: 20px;
+        @media(max-width:768px){
+            font-size: 15px;
         }
     }
 
