--- a/src/containers/PricingPlan/pricingPlan.module.scss
+++ b/src/containers/PricingPlan/pricingPlan.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .container{
-
+    font-family: $poppins_regular;
     .tabs{
         >div>div{
             justify-content: center;
@@ -15,9 +15,11 @@
         }
         .tab{
             color: #fff;
-            font-size: 14px;
+            font-size: 16px;
+            font-weight: 500;
             text-transform: capitalize;
             border: 3px solid transparent;
+            font-family: $poppins_regular;
             @media(max-width:768px) {
                 width: 100%;
                 max-width: 768px;
