--- a/src/containers/ReasonToCallUs/reasonToCallUs.module.scss
+++ b/src/containers/ReasonToCallUs/reasonToCallUs.module.scss
@@ -2,7 +2,7 @@
 
 .container{ 
     padding: 60px 0;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/images/bgImgBanner.jpg");
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/bgImgBanner2.jpg");
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,9 +13,20 @@
         font-size: 30px;
         color: #fff;
         font-family: $poppins_regular;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         @media(max-width:768px){
             font-size: 25px;
+        }
+    }
+
+    .text{
+        margin: 0;
+        text-align: center;
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: 20px;
+        @media(max-width:768px){
+            font-size: 15px;
         }
     }
 
