--- a/src/containers/PricingPlan/pricingPlan.module.scss
+++ b/src/containers/PricingPlan/pricingPlan.module.scss
@@ -25,11 +25,72 @@
                 max-width: 768px;
             }
         }
-        .tab:focus{
-            border-bottom: 3px solid $yellow;
+        .active {
+            border-bottom: 3px solid $tarcoal;
+            background-color: $yellow;
+            color: $tarcoal;
+
         }
         // @media(max-width:768px) {
             
         // }
+    }
+
+    .pricing_details{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .tab_heading{
+            font-size: 18px;
+            text-align: center;
+            margin-top: 25px;
+        }
+
+        .tab_btn{
+            font-size: 18px;
+            font-weight: 500;
+            color: $tarcoal;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 20px;
+            border: 2px solid $tarcoal;
+            background-color: #fff;
+        }
+
+        .plan_details{
+
+            .plan{
+                background-color: #fff;
+                border: 1px solid #000;
+
+                .icon{
+
+                }
+
+                .plan_heading{
+                    font-size: 22px;
+                    margin: 0;
+                    text-align: center;
+                }
+
+                .ul{
+                    padding-left: 10px;
+                    li{
+                        list-style-type: none;
+                        display: flex;
+                        gap: 10px;
+                        align-items: center;
+            
+                        .li_icon{
+                            color: red;
+                        }
+                    }
+                    @media (max-width:768px) {
+                        padding-left: 0;
+                    }
+                }
+            }
+        }
     }
 }
