--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,10 +6,11 @@
     box-sizing: border-box;
 }
 
+
 .main{
     min-height: 130px;
     font-family: $poppins_regular;
-    background: #fafafa;
+    background: #f0f0f0;
 }
 
 /* ////////bootstrap style override///////// */
