--- a/src/containers/PriceList/priceList.module.scss
+++ b/src/containers/PriceList/priceList.module.scss
@@ -37,3 +37,11 @@
         padding: 30px 0;
     }
 }
+
+.remmarg{
+    margin-bottom: 3rem;
+    padding: 0;
+    @media(max-width:768px){
+        margin: 0;
+    }
+}
