background Images changed

--- a/src/containers/Form/form.module.scss
+++ b/src/containers/Form/form.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     padding: 30px 0;
     max-height: 900px;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../../public/images/hero.jpg");
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://res.cloudinary.com/divbpcro8/image/upload/v1716553930/hero_utdjud.jpg");
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
