--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -2,6 +2,12 @@
 
 .navbar{
     background-color: #000;
+
+    .logo{
+        height: auto;
+        width: 60px;
+    }
+
     .menu_icon{
         display: none;
     }
