--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -27,9 +27,9 @@
         border-radius: 5px;
         font-weight: 600;
     }
-    .btn:hover{
-        background-color: #020507;
-    }
+    // .btn:hover{
+    //     background-color: #020507;
+    // }
 
     .dropdown li a{
         color: #000 !important;
