--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -11,6 +11,7 @@
     min-height: 350px;
     font-family: $poppins_regular;
     background: #f0f0f0;
+    padding-top: 82px;
 }
 
 /* ////////bootstrap style override///////// */
