--- a/src/containers/PricesPage/pricesPage.module.scss
+++ b/src/containers/PricesPage/pricesPage.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .container{ 
-    padding: 0 50px;
+
     .heading{
         margin: 0;
         text-align: center;
@@ -37,5 +37,19 @@
     }
     @media(max-width:768px){
         padding: 30px 0;
+    }
+}
+
+.mbl_container{
+    padding: 25px 0;
+    .accordion_icon{
+        font-size: 20px;
+    }
+
+    .accordion_heading{
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        margin: 0;
     }
 }
