--- a/src/containers/PricesPage/pricesPage.module.scss
+++ b/src/containers/PricesPage/pricesPage.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables';
 
 .container{ 
+    font-family: $poppins_regular;
 
     .heading{
         margin: 0;
@@ -35,13 +36,21 @@
             color: #fff;
         }
     }
-    @media(max-width:768px){
-        padding: 30px 0;
-    }
 }
 
 .mbl_container{
-    padding: 25px 0;
+    font-family: $poppins_regular;
+    padding-bottom: 25px;
+
+    .mbl_heading{
+        padding: 30px 0;
+        background-image: url("https://res.cloudinary.com/divbpcro8/image/upload/v1717249245/mbl_header_banner_ftacwp.jpg");
+        background-position: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        text-align: center;
+    }
+
     .accordion_icon{
         font-size: 20px;
     }
@@ -49,7 +58,18 @@
     .accordion_heading{
         display: flex;
         align-items: center;
-        font-size: 20px;
+        font-size: 18px;
         margin: 0;
+    }
+
+    .table_container{
+        background-color: #ffffffab;
+        scrollbar-width: thin;
+        th{
+            font-size: 16px;
+            font-family: $poppins_regular;
+            background-color: $tarcoal;
+            color: #fff;
+        }
     }
 }
