about us page done

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .footer_container{
-    background-color: #000;
+    background: linear-gradient(120deg, #000 0%, #112A46 100%);
     color: #fff;
     .container{
         width: 85vw;
