--- a/src/containers/PricesPage/pricesPage.module.scss
+++ b/src/containers/PricesPage/pricesPage.module.scss
@@ -1,5 +1,20 @@
 @import '../../styles/variables';
 
+
+.page_heading{
+    padding: 80px 0;
+    background-image: url("https://res.cloudinary.com/divbpcro8/image/upload/v1717249245/mbl_header_banner_ftacwp.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    font-weight: 900;
+    @media(max-width:768px){
+        padding: 30px 0;
+    }
+}
+
+
 .container{ 
     font-family: $poppins_regular;
 
@@ -41,15 +56,6 @@
 .mbl_container{
     font-family: $poppins_regular;
     padding-bottom: 25px;
-
-    .mbl_heading{
-        padding: 30px 0;
-        background-image: url("https://res.cloudinary.com/divbpcro8/image/upload/v1717249245/mbl_header_banner_ftacwp.jpg");
-        background-position: 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        text-align: center;
-    }
 
     .accordion_icon{
         font-size: 20px;
