--- a/src/containers/ReasonToCallUs/reasonToCallUs.module.scss
+++ b/src/containers/ReasonToCallUs/reasonToCallUs.module.scss
@@ -2,7 +2,7 @@
 
 .container{ 
     padding: 60px 0;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://www.shutterstock.com/shutterstock/photos/1791136307/display_1500/stock-photo-cleaners-clean-empty-office-space-photo-1791136307.jpg");
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://res.cloudinary.com/divbpcro8/image/upload/v1717413897/aboutHero_dgazpl.jpg");
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
