--- a/src/containers/PricesPage/pricesPage.module.scss
+++ b/src/containers/PricesPage/pricesPage.module.scss
@@ -3,12 +3,13 @@
 
 .page_heading{
     padding: 80px 0;
-    background-image: url("https://res.cloudinary.com/divbpcro8/image/upload/v1717249245/mbl_header_banner_ftacwp.jpg");
-    background-position: 50%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://res.cloudinary.com/divbpcro8/image/upload/v1717424947/headingBanner_gge2qm.jpg");
+    background-position: center 70%;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
     font-weight: 900;
+    color: #fff;
     @media(max-width:768px){
         padding: 30px 0;
     }
