--- a/src/containers/PriceList/priceList.module.scss
+++ b/src/containers/PriceList/priceList.module.scss
@@ -31,6 +31,8 @@
         th{
             font-size: 16px;
             font-family: $poppins_regular;
+            background-color: $yellow;
+            color: #000;
         }
     }
     @media(max-width:768px){
