--- a/src/containers/ReasonToCallUs/reasonToCallUs.module.scss
+++ b/src/containers/ReasonToCallUs/reasonToCallUs.module.scss
@@ -36,8 +36,8 @@
         th{
             font-size: 16px;
             font-family: $poppins_regular;
-            background-color: $tarcoal;
-            color: #fff;
+            background-color: $yellow;
+            color: #000;
         }
     }
     @media(max-width:768px){
