--- a/src/containers/PricesPage/pricesPage.module.scss
+++ b/src/containers/PricesPage/pricesPage.module.scss
@@ -75,8 +75,8 @@
         th{
             font-size: 16px;
             font-family: $poppins_regular;
-            background-color: $tarcoal;
-            color: #fff;
+            background-color: $yellow;
+            color: #000;
         }
     }
 }
