add services page & loader

--- a/src/containers/DiscountPopUp/discountPopUp.module.scss
+++ b/src/containers/DiscountPopUp/discountPopUp.module.scss
@@ -63,6 +63,7 @@
                 font-size: 13px;
                 margin: 0;
                 color: #4F4F4F;
+                cursor: pointer;
             }
         }
         .cross_container{
