--- a/src/containers/PricingPlan/pricingPlan.module.scss
+++ b/src/containers/PricingPlan/pricingPlan.module.scss
@@ -2,6 +2,18 @@
 
 .container{
     font-family: $poppins_regular;
+
+    .heading{
+        margin: 0;
+        text-align: center;
+        font-size: 30px;
+        color: $tarcoal;
+        font-family: $poppins_regular;
+        margin-bottom: 15px;
+        @media(max-width:768px){
+            font-size: 25px;
+        }
+    }
     .tabs{
         >div>div{
             justify-content: center;
