--- a/src/containers/Services/service.module.scss
+++ b/src/containers/Services/service.module.scss
@@ -26,10 +26,9 @@
     padding: 30px 0;
     
     .productCard {
-        cursor: pointer;
         
         .card{
-            
+            // padding: 20px 30px;
             .setWidth{
                 overflow: hidden;
 
@@ -38,7 +37,6 @@
                     height: 330px;
                     width: 100%;
                     object-fit: cover;
-                    border-top-left-radius: 100px;
                     @media(max-width:768px){
                         height: 250px;
                     }
