services prices all done

--- a/src/containers/PricesPage/pricesPage.module.scss
+++ b/src/containers/PricesPage/pricesPage.module.scss
@@ -76,6 +76,11 @@
         margin: 0;
     }
 
+    .heading{
+        text-align: center;
+        font-size: 20px;
+    }
+
     .table_container{
         background-color: #ffffffab;
         scrollbar-width: thin;
