--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -132,61 +132,28 @@
     align-items: center;
     height: 600px;
     .loader {
-        color: #000;
-        font-size: 30px;
-        text-indent: -9999em;
-        overflow: hidden;
-        width: 1em;
-        height: 1em;
-        border-radius: 50%;
         position: relative;
-        transform: translateZ(0);
-        animation: mltShdSpin 1.7s infinite ease, round 1.7s infinite ease;
-    }
-      
-    @keyframes mltShdSpin {
-        0% {
-          box-shadow: 0 -0.83em 0 -0.4em,
-          0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em,
-          0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
-        }
-        5%,
-        95% {
-          box-shadow: 0 -0.83em 0 -0.4em, 
-          0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 
-          0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
-        }
-        10%,
-        59% {
-          box-shadow: 0 -0.83em 0 -0.4em, 
-          -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, 
-          -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
-        }
-        20% {
-          box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em,
-           -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, 
-           -0.749em -0.34em 0 -0.477em;
-        }
-        38% {
-          box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em,
-           -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, 
-           -0.82em -0.09em 0 -0.477em;
-        }
-        100% {
-          box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 
-          0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
-        }
-    }
-      
-    @keyframes round {
-        0% { transform: rotate(0deg) }
-        100% { transform: rotate(360deg) }
+        width: 55px;
+        height: 55px;
+        background-repeat: no-repeat;
+        background-image: linear-gradient(#fbd02b 50px, transparent 0),
+                          linear-gradient(#fbd02b 50px, transparent 0),
+                          linear-gradient(#fbd02b 50px, transparent 0),
+                          linear-gradient(#fbd02b 50px, transparent 0),
+                          linear-gradient(#fbd02b 50px, transparent 0);
+        background-size: 5px 40px;
+        background-position: 0px center, 10px center, 20px center, 30px center, 40px center, 50px center;
+        animation: spikeUp 1s linear infinite alternate;
+      }
+    @keyframes spikeUp {
+      0% { background-size: 5px 40px}
+      16% { background-size: 5px 55px, 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 40px}
+      33% { background-size: 5px 40px, 5px 55px, 5px 40px, 5px 40px, 5px 40px, 5px 40px}
+      50% { background-size: 5px 40px, 5px 40px, 5px 55px, 5px 40px, 5px 40px, 5px 40px}
+      66% { background-size: 5px 40px, 5px 40px, 5px 40px, 5px 55px, 5px 40px, 5px 40px}
+      83% { background-size: 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 55px, 5px 40px}
+      100% { background-size: 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 55px}
     }    
-    @media(max-width:768px){
-        .loader{
-            font-size: 25px;
-        }
-    }
 }
  
 //////////// dropdown //////
