form has been ready & ready to deploy on domain

--- a/src/containers/DiscountPopUp/discountPopUp.module.scss
+++ b/src/containers/DiscountPopUp/discountPopUp.module.scss
@@ -58,6 +58,7 @@
                 padding: 0px 20px;
                 color: #fff;
                 margin-bottom: 20px;
+                text-align: center;
             }
             .close_text{
                 font-size: 13px;
