--- a/src/containers/Form/form.module.scss
+++ b/src/containers/Form/form.module.scss
@@ -79,6 +79,7 @@
         border-radius: 5px;
         font-size: 25px;
         font-weight: 600;
+        text-decoration: none;
         @media(max-width:768px){
             padding: 10px 15px;
         }
