--- a/src/containers/GetACall/getACall.module.scss
+++ b/src/containers/GetACall/getACall.module.scss
@@ -11,6 +11,7 @@
     border-radius: 5px;
     font-size: 20px;
     font-weight: 300;
+    text-decoration: none;
     font-family: $poppins-regular;
     @media(max-width:768px){
         padding: 10px 15px;
